    - res/i18n: refresh translation files again.
    - res/i18n/x2goclient_nb_no.ts: replace "X-Serv..." with "X.Org Server"
      where applicable.
    - res/i18n/x2goclient_nb_no.ts: correctly use "XQuartz" where necessary.
    - res/i18n/x2goclient_nb_no.ts: whitespace only.
    - res/i18n/x2goclient_nb_no.ts: fix up some "x2go" -> "X2Go" errors.
  * debian/control:
    - Change apache2-dev | libc6-dev build dependency back to apache2-dev
      only. Otherwise, apache2-dev is not installed at all, even though
      theoretically available. The initial reasoning for this dependency type,
      apache2-dev not being available on all Ubuntu/Debian platforms, is not
      true anymore.
    - Change apache2-dev build dependency yet again to apache2-dev |
      apache2-threaded-dev. Turns out all Debian distros but wheezy (currently
      oldstable) have an apache2-dev package. Even oldoldstable (squeeze)
      does...

  [ Oleksandr Shneyder ]
  * New upstream release (4.0.5.1):
    - xsettingswidget: compile only on Windows.
    - Add support for new style command line options of xfreerdp on direct RDP
      connections. (Fixes: #772).
    - Replace "::" with "_" for the desktop link name on Windows.
    - Fix direct RDP in broker mode.
    - Fix crashing client when editing session from SessionManageDialog.
      Fixes: #921.
    - Configure audio input in pulseaudio on Windows.
    - Reconnect ssh broker in case of IO Error.
    - Reformat source onmainwindow.cpp.
    - Disable settings editing if a directory with central settings is exists.
    - Format long names on session buttons.
    - Central settings for Linux, Mac and Windows.

  [ Mike Gabriel ]
  * New upstream release (4.0.5.1):
    - xinerama.conf: Don't choke if screen coordintate lines in xinerama.conf
      start with a dash ("-"). (Fixes: #948).

  [ Mike DePaulo ]
  * New upstream release (4.0.5.1):
    - Windows: Update bundled Win32 OpenSSL from 1.0.1p to 1.0.1q,